# bound

./: .env.example  .gitignore  Cargo.toml  FRONTEND.md  LICENSE  PROJECT.md  README.md  RESOURCES.md  VERIFY.md  WRITEUP.md  components.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/auditor/: route.ts
app/api/challenger/: route.ts
app/api/chat/: route.ts
app/api/cheat/: route.ts
app/api/fund/: route.ts
app/auditor/: page.tsx
app/chat/: page.tsx
app/components/: AddressPill.tsx  CertificateCard.tsx  ConnectWalletButton.tsx  Nav.tsx  QuickPrompts.tsx  StatusBadge.tsx  ToolCallCard.tsx  UsdAmount.tsx
app/control/: page.tsx
app/dashboard/: page.tsx
app/lib/: accounts.ts  agent-tools.ts  agent.ts  bound-client.ts  cert-view.ts  config.ts  explorer.ts  payments.ts  tx-build.ts  ui-config.ts
bindings/auditor_staking/: README.md  package.json
bindings/challenge_manager/: README.md  package.json
bindings/fee_escrow/: README.md  package.json
bindings/registry/: README.md  package.json
bindings/reserve_vault/: README.md  package.json
bindings/usdc/: README.md  package.json
contracts/auditor-staking/: Cargo.toml
contracts/challenge-manager/: Cargo.toml
contracts/fee-escrow/: Cargo.toml
contracts/registry/: Cargo.toml
contracts/reserve-vault/: Cargo.toml
mcp/: server.ts
scripts/: demo.ts  deploy-all.ts  dry-run.ts  lib.ts  mcp-smoke.ts  routes-smoke.ts  sdk-smoke.ts  setup-accounts.ts  tools-smoke.ts  tsconfig.json  wallet-smoke.ts
(+48 files in other folders)
