[workspace]
members = [
    "contracts/reserve-vault",
    "contracts/auditor-staking",
    "contracts/fee-escrow",
    "contracts/challenge-manager",
    "contracts/registry",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
